@@ -13,6 +13,7 @@ Copyright 2010 Los Alamos National Security, LLC.
 import numpy as np
 from spacepy import help
 import spacepy
+import spacepy.time
 
 __contact__ = 'Steven Morley, smorley@lanl.gov'
 
@@ -81,9 +82,16 @@ class Coords(object):
     .. autosummary::
         ~Coords.append
         ~Coords.convert
+        ~Coords.from_skycoord
+        ~Coord.to_skycoord
     .. automethod:: append
     .. automethod:: convert
+    .. automethod:: from_skycoord
+    .. automethod:: to_skycoord
     '''
+
+    Re = 6371200.0  # meters
+
     def __init__(self, data, dtype, carsph, units=None, ticks=None):
 
         from . import irbempy as op
@@ -129,7 +137,6 @@ class Coords(object):
         self.dtype = dtype
         self.carsph = carsph
         # setup units
-        self.Re = 6371000.0 #metres
         if units is None and carsph == 'car':
             # use standard units
             self.units = ['Re', 'Re', 'Re']
@@ -391,6 +398,71 @@ class Coords(object):
         data.extend(list(otherdata.data))
         newobj = Coords(data, dtype=self.dtype, carsph=self.carsph)
         return newobj
+
+    # -----------------------------------------------
+    def to_skycoord(self):
+        '''
+        Create an Astropy SkyCoord instance based on this instance
+
+        Returns
+        =======
+        out : `astropy.coordinates.SkyCoord`
+            This coordinate as an Astropy SkyCoord
+
+        Notes
+        =====
+        This method requires Astropy to be installed.
+
+        This method uses the GEO coordinate frame as the common frame between the two libraries.
+        '''
+        if self.ticks is None:
+            raise ValueError("This method requires the attribute `ticks` to be specified.")
+
+        try:
+            import astropy.coordinates
+            import astropy.time
+        except ImportError as e:
+            raise e.__class__("This method requires Astropy to be installed.")
+
+        coord = self.convert('GEO', 'car')  # GEO is Astropy ITRS
+        data = coord.data * self.Re  # convert to meters
+        obstime = coord.ticks.APT
+
+        return astropy.coordinates.SkyCoord(x=data[:, 0], y=data[:, 1], z=data[:, 2],
+                                            unit='m', frame='itrs', obstime=obstime)
+
+    # -----------------------------------------------
+    @classmethod
+    def from_skycoord(cls, skycoord):
+        '''
+        Create a Coords instance from an Astropy SkyCoord instance
+
+        Parameters
+        ==========
+        skycoord : `astropy.coordinates.SkyCoord`
+            The coordinate to be converted
+
+        Returns
+        =======
+        out : Coords instance
+            The converted coordinate
+
+        Notes
+        =====
+        This method requires Astropy to be installed.
+
+        This method uses the GEO coordinate frame as the common frame between the two libraries.
+        '''
+        try:
+            import astropy.coordinates
+        except ImportError as e:
+            raise e.__class__("This method requires Astropy to be installed.")
+
+        skycoord = astropy.coordinates.SkyCoord(skycoord).itrs  # Astropy ITRS is GEO
+        data = (skycoord.cartesian.xyz.to_value('m') / cls.Re).T  # convert Cartesian to Re units
+        ticks = spacepy.time.Ticktock(skycoord.obstime)
+
+        return cls(data, 'GEO', 'car', ticks=ticks)
 
 
 def quaternionNormalize(Qin, scalarPos='last'):
