@@ -1,6 +1,8 @@
 Changes in Version 0.2.3 (2021-xx-xx)
 =====================================
 - Installs numpy before build on newer versions of pip (thanks Michael Hirsch)
+coordinates
+ - Added Coords methods to convert to/from Astropy SkyCoord instances
 irbempy
  - Update IRBEMlib to git commit a4759c0 (2021-06-30)
  - This update fixes an uninitialized GSM to SM transform that would return NaN
